--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,19 +29,16 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.3
-  cloud_firestore: ^4.15.4
   collapsible_sidebar: ^2.0.7
   cupertino_icons: ^1.0.6
   equatable: ^2.0.5
-  file_picker: ^6.1.1
-  firebase_auth: ^4.17.4
-  firebase_core: ^2.25.4
-  firebase_storage: ^11.6.5
+  cloud_firestore: ^4.15.5
+  firebase_core: null
+  firebase_storage: ^11.6.6
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
   font_awesome_flutter: ^10.7.0
-  image_picker: ^1.0.7
   image_picker_web: ^3.1.1
   shared_preferences: ^2.2.2
 
