three pages updated except edit and delete

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.3
+  cloud_firestore: ^4.15.5
   collapsible_sidebar: ^2.0.7
   cupertino_icons: ^1.0.6
+  data_table_2: ^2.5.11
   equatable: ^2.0.5
-  cloud_firestore: ^4.15.5
   firebase_core: null
   firebase_storage: ^11.6.6
   flutter:
@@ -41,6 +42,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   image_picker_web: ^3.1.1
   shared_preferences: ^2.2.2
+  sidebarx: ^0.16.3
 
 dev_dependencies:
   flutter_lints: ^3.0.0
