--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.3
+  cached_network_image: ^3.3.1
   cloud_firestore: ^4.15.5
   collapsible_sidebar: ^2.0.7
   cupertino_icons: ^1.0.6
@@ -41,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   font_awesome_flutter: ^10.7.0
   image_picker_web: ^3.1.1
+  multi_dropdown: ^2.1.4
   shared_preferences: ^2.2.2
   sidebarx: ^0.16.3
 
