--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
+  fluttertoast: ^8.2.4
   font_awesome_flutter: ^10.7.0
   image_picker_web: ^3.1.1
   multi_dropdown: ^2.1.4
