--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,22 +30,33 @@ environment:
 dependencies:
   bloc: ^8.1.3
   cached_network_image: ^3.3.1
+  calendar_view: ^1.1.0
+  chat_bubbles: ^1.6.0
   cloud_firestore: ^4.15.5
   collapsible_sidebar: ^2.0.7
   cupertino_icons: ^1.0.6
   data_table_2: ^2.5.11
+  easy_loading_button: ^0.3.2
   equatable: ^2.0.5
   firebase_core: null
+  firebase_database: ^10.4.11
   firebase_storage: ^11.6.6
+  fl_chart: ^0.66.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
+  flutter_chat_bubble: ^2.0.2
   fluttertoast: ^8.2.4
   font_awesome_flutter: ^10.7.0
   image_picker_web: ^3.1.1
+  loading_btn: ^1.0.3
+  lottie: ^3.1.0
   multi_dropdown: ^2.1.4
   shared_preferences: ^2.2.2
+  shimmer: ^3.0.0
   sidebarx: ^0.16.3
+  syncfusion_flutter_charts: ^25.1.35
+  table_calendar: ^3.1.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -62,7 +73,12 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/images/
+    - lib/assets/images/splashscreen.jpg
+    - lib/assets/images/rupee.png
+    - lib/assets/images/booking.png
+    - lib/assets/images/car.png
+    - lib/assets/images/users.png
+    - lib/assets/images/chatgif.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
